--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Relatório IMC</string>
-    <string name="name">Nome</string>
-    <string name="age">Idade</string>
-    <string name="height">Altura</string>
-    <string name="weight">Peso</string>
+    <string name="name">Nome:</string>
+    <string name="age">Idade:</string>
+    <string name="height">Altura (m):</string>
+    <string name="weight">Peso (kg):</string>
     <string name="report">Relatório nutricional</string>
-    <string name="index">IMC</string>
-    <string name="classification">Classificação</string>
+    <string name="index">IMC:</string>
+    <string name="classification">Classificação:</string>
     <string name="underWeight">Abaixo do Peso</string>
     <string name="healthy">Saudável</string>
     <string name="overWeight">Sobrepeso</string>
