--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
     <string name="app_name">BMI report</string>
-    <string name="name">Name</string>
-    <string name="age">Age</string>
-    <string name="height">Height</string>
-    <string name="weight">Weight</string>
+    <string name="name">Name:</string>
+    <string name="age">Age:</string>
+    <string name="height">Height (m):</string>
+    <string name="weight">Weight (kg):</string>
     <string name="report">Nutritional report</string>
-    <string name="index">BMI</string>
-    <string name="classification">Classification</string>
+    <string name="index">BMI:</string>
+    <string name="classification">Classification:</string>
     <string name="underWeight">Under weight</string>
     <string name="healthy">Healthy</string>
     <string name="overWeight">Over Weight</string>
