--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="g2obesity">Grade II Obesity (Severe)</string>
     <string name="g3obesity">Grade III Obesity (Morbid)</string>
     <string name="newCalculation">New Calculation</string>
+    <string name="invalidValues">Invalid values, try again!</string>
+    <string name="divByZero">Invalid division by zero!</string>
+    <string name="resultError">Error during calculation, try again!</string>
 </resources>
